--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -21,7 +21,7 @@
 <!ENTITY Ctr_appearance		"Aussehen">
 <!ENTITY Ctr_left			"Links">
 <!ENTITY Ctr_right			"Rechts">
-<!ENTITY Ctr_privmode		"(privates Fenster)">
+<!ENTITY Ctr_privmode		"(Privates Fenster)">
 
 <!ENTITY Ctr_cuibuttons		"Schaltflächen">
 <!ENTITY Ctr_cuibutnormal	"Normal">
@@ -98,7 +98,7 @@
 <!ENTITY Ctr_paneluibtweak	"Menüschaltfläche visuell als &brandShortName;-Schaltfläche …">
 <!ENTITY Ctr_paneluibtweak2	"Menüschaltfläche visuell als &brandShortName;-Schaltfläche (nur Symbol) …">
 <!ENTITY Ctr_paneluibtweak3	"… darstellen, wenn sie sich auf der Tableiste befindet.">
-<!ENTITY Ctr_appbuttonc		"Schaltflächenfarbe">
+<!ENTITY Ctr_appbuttonc		"Farbe">
 <!ENTITY Ctr_appbuttonc_o	"Orange  (Standard)">
 <!ENTITY Ctr_appbuttonc_a	"Blau (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Schwarz (Nightly)">
@@ -401,6 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Seitensuchhervorhebung">
 <!ENTITY Ctr_fx50findbarhl	"Das Deaktivieren dieser Optionen entfernt die 'Seitensuchhervorhebung'.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_oldfontgfx	"Alte Schriftdarstellung">
 
 
 <!ENTITY Ctr_pw_settings	"Einstellungen">
