--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -183,7 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Strona startowa (about:home): ukryj fragmenty">
 <!ENTITY Ctr_search_ui		"Wyszukiwanie">
 <!ENTITY Ctr_ctroldsearch	"Stara wyszukiwarka">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"Brak kompatybilności z innymi dodatkami wyszukiwarki!">
 <!ENTITY Ctr_ctroldsearchc	"Czyść pole wyszukiwania po wyszukaniu">
 <!ENTITY Ctr_ctroldsearchr	"Przywracaj pierwszą wyszukiwarkę na liście po wyszukaniu">
 <!ENTITY Ctr_ctrosearchdel	"opóźnienia">
@@ -210,12 +210,12 @@
 <!ENTITY Ctr_oldplacesbut	"Elementy i foldery zakładek na pasku: stary wygląd">
 <!ENTITY Ctr_dl_pm_drop		"Panel przycisków pobierania: pokaż znacznik rozwinięcia">
 <!ENTITY Ctr_bmbutpanelm	"Menu podręczne: wygląd menu panelu">
-<!ENTITY Ctr_bmbunsortbm	"Menu podręczne: podmenu 'Pozostałe zakładki'">
+<!ENTITY Ctr_bmbunsortbm	"Menu podręczne: pokaż menu 'Pozostałe zakładki'">
 <!ENTITY Ctr_bmbunsortbm2	"Menu ponad zakładkami">
-<!ENTITY Ctr_bmbviewbmsb	"Menu podręczne: pokaż 'Wyświetl panel zakładek'">
-<!ENTITY Ctr_bmbviewbmtb	"Menu podręczne: pokaż 'Wyświetl pasek zakładek'">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
-<!ENTITY Ctr_bmbnounsort	"Menu podręczne: ukryj 'Pozostałe zakładki'">
+<!ENTITY Ctr_bmbviewbmsb	"Menu podręczne: pokaż w menu element 'Wyświetl panel zakładek'">
+<!ENTITY Ctr_bmbviewbmtb	"Menu podręczne: pokaż w menu element 'Wyświetl pasek zakładek'">
+<!ENTITY Ctr_bmbutnotb		"Menu podręczne: ukryj menu 'Pasek zakładek'">
+<!ENTITY Ctr_bmbnounsort	"Menu podręczne: ukryj menu 'Pozostałe zakładki' oraz element w menu">
 <!ENTITY Ctr_bmbutclpopup	"Menu podręczne: pokaż tylko 'Dodaj zakładkę' oraz zakładki">
 <!ENTITY Ctr_bmbutnotext	"Ukryj etykietę na pasku zakładek">
 <!ENTITY Ctr_skipprintpr	"Przycisk drukowania: pomiń podgląd wydruku">
@@ -401,6 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Podświetlanie paska wyszukiwania">
 <!ENTITY Ctr_fx50findbarhl	"Odznaczenie tych ustawień usuwa funkcje 'podświetlania' paska wyszukiwania.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
+<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
 <!ENTITY Ctr_pw_settings	"Ustawienia">
