--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -401,6 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Findlinje fremhævning">
 <!ENTITY Ctr_fx50findbarhl	"Deaktivér disse indstillinger for at fjerne findlinjens 'fremhæv'-funktioner.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
 <!ENTITY Ctr_pw_settings	"Indstillinger">
