--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -401,6 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Wuzwignjenje pytańskego póla">
 <!ENTITY Ctr_fx50findbarhl	"Gaž se toś te nastajenja znjemóžniju, se 'wuzwignjeńske' funkcije wótpóraju.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
