--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -98,7 +98,7 @@
 <!ENTITY Ctr_paneluibtweak	"Display menu button as &brandShortName; button...">
 <!ENTITY Ctr_paneluibtweak2	"Display menu button as &brandShortName; button (icon only)...">
 <!ENTITY Ctr_paneluibtweak3	"...when on tabs toolbar">
-<!ENTITY Ctr_appbuttonc		"Button color">
+<!ENTITY Ctr_appbuttonc		"Color">
 <!ENTITY Ctr_appbuttonc_o	"Orange (default)">
 <!ENTITY Ctr_appbuttonc_a	"Blue (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Black (Nightly)">
@@ -399,8 +399,9 @@
 <!ENTITY Ctr_e_tabsaudioico	"Audio playing icon">
 <!ENTITY Ctr_e_containertab	"Container Tabs">
 <!ENTITY Ctr_e_findbarhl	"Findbar highlighting">
-<!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
+<!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars new 'highlight' features.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
 <!ENTITY Ctr_pw_settings	"Settings">
