--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -401,6 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Función de resaltado de la barra de herramientas de búsqueda.">
 <!ENTITY Ctr_fx50findbarhl	"Desmarcarlas deshabilita el resaltado: estilo modal (con atenuación) / de todas las coincidencias">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
 <!ENTITY Ctr_pw_settings	"Configuración">
