--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -401,6 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Leidmisribal esiletõstmine">
 <!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab leidmisribal esiletõstmise võimalused.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
 <!ENTITY Ctr_pw_settings	"Sätted">
