--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -401,6 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Подсветка панели поиска">
 <!ENTITY Ctr_fx50findbarhl	"Отключение параметра убирает функцию «подсветки» панели поиска.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
+<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
 <!ENTITY Ctr_pw_settings	"Настройки">
