--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -401,6 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Poudarjanje iskalne vrstice">
 <!ENTITY Ctr_fx50findbarhl	"Odznačitev teh nastavitev odstrani možnosti 'poudarjanja' iskalne vrstice.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
 <!ENTITY Ctr_pw_settings	"Nastavitve">
