--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -98,7 +98,7 @@
 <!ENTITY Ctr_paneluibtweak	"Wyświetl przycisk menu jako przycisk programu &brandShortName;...">
 <!ENTITY Ctr_paneluibtweak2	"Wyświetl przycisk menu jako przycisk programu &brandShortName; (tylko ikona)...">
 <!ENTITY Ctr_paneluibtweak3	"...gdy na pasku kart">
-<!ENTITY Ctr_appbuttonc		"Kolor przycisku">
+<!ENTITY Ctr_appbuttonc		"Kolor">
 <!ENTITY Ctr_appbuttonc_o	"Pomarańczowy (domyślny)">
 <!ENTITY Ctr_appbuttonc_a	"Błękitny (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Czarny (Nightly)">
@@ -399,9 +399,9 @@
 <!ENTITY Ctr_e_tabsaudioico	"Ikona odtwarzania dźwięku">
 <!ENTITY Ctr_e_containertab	"Karty z kontekstem">
 <!ENTITY Ctr_e_findbarhl	"Podświetlanie paska wyszukiwania">
-<!ENTITY Ctr_fx50findbarhl	"Odznaczenie tych ustawień usuwa funkcje 'podświetlania' paska wyszukiwania.">
+<!ENTITY Ctr_fx50findbarhl	"Odznaczenie tych ustawień usuwa nowe funkcje 'podświetlania' paska wyszukiwania.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"Stare renderowanie czcionek">
 
 
 <!ENTITY Ctr_pw_settings	"Ustawienia">
