--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -183,7 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Начальная страница (about:home): скрыть сниппеты">
 <!ENTITY Ctr_search_ui		"Поиск">
 <!ENTITY Ctr_ctroldsearch	"Старый поиск">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"Не совместим с другими поисковыми расширениями!">
 <!ENTITY Ctr_ctroldsearchc	"Очистить форму после поиска">
 <!ENTITY Ctr_ctroldsearchr	"После поиска переключаться на первую в списке поисковую систему">
 <!ENTITY Ctr_ctrosearchdel	"Задержка выполнения">
@@ -214,7 +214,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Меню над закладками">
 <!ENTITY Ctr_bmbviewbmsb	"Всплывающее меню: «Показать боковую панель закладок»">
 <!ENTITY Ctr_bmbviewbmtb	"Всплывающее меню: «Показать панель закладок»">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
+<!ENTITY Ctr_bmbutnotb		"Всплывающее меню: скрыть «Панель закладок»">
 <!ENTITY Ctr_bmbnounsort	"Всплывающее меню: скрыть «Неподшитые закладки»">
 <!ENTITY Ctr_bmbutclpopup	"Всплывающее меню: показывать только «Добавить страницу» и закладки">
 <!ENTITY Ctr_bmbutnotext	"Скрыть текст на панели закладок">
@@ -401,7 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Подсветка панели поиска">
 <!ENTITY Ctr_fx50findbarhl	"Отключение параметра убирает функцию «подсветки» панели поиска.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"Старый рендеринг шрифтов">
 
 
 <!ENTITY Ctr_pw_settings	"Настройки">
