--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -98,7 +98,7 @@
 <!ENTITY Ctr_paneluibtweak	"Εμφάνιση κουμπιού-μενού ως κουμπί &brandShortName;…">
 <!ENTITY Ctr_paneluibtweak2	"Εμφάνιση κουμπιού-μενού ως κουμπί &brandShortName; (μόνο εικονίδιο)…">
 <!ENTITY Ctr_paneluibtweak3	"…όταν βρίσκεται στην εργαλειοθήκη καρτελών">
-<!ENTITY Ctr_appbuttonc		"Χρώμα κουμπιού">
+<!ENTITY Ctr_appbuttonc		"Χρώμα">
 <!ENTITY Ctr_appbuttonc_o	"Πορτοκαλί (προεπιλογή)">
 <!ENTITY Ctr_appbuttonc_a	"Μπλε (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Μαύρο (Nightly)">
@@ -183,7 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Αρχική σελίδα (about:home): απόκρυψη αποσπασμάτων κειμένου">
 <!ENTITY Ctr_search_ui		"Αναζήτηση">
 <!ENTITY Ctr_ctroldsearch	"Παλιότερη διεπαφή αναζήτησης">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"Μη συμβατή με άλλες επεκτάσεις αναζήτησης!">
 <!ENTITY Ctr_ctroldsearchc	"Κένωση πλαισίου αναζήτησης μετά την αναζήτηση">
 <!ENTITY Ctr_ctroldsearchr	"Επαναφορά στην πρώτη μηχανή αναζήτησης στη λίστα μετά την αναζήτηση">
 <!ENTITY Ctr_ctrosearchdel	"καθυστέρηση">
@@ -210,12 +210,12 @@
 <!ENTITY Ctr_oldplacesbut	"Στοιχεία σελιδοδεικτών και φάκελοι σε εργαλειοθήκη: παλιά εμφάνιση">
 <!ENTITY Ctr_dl_pm_drop		"Πινακίδιο κουμπιού λήψεων: εμφάνιση δείκτη ανάπτυξης">
 <!ENTITY Ctr_bmbutpanelm	"Αναδυόμενο: εμφάνιση ως μενού πίνακα">
-<!ENTITY Ctr_bmbunsortbm	"Αναδυόμενο: μενού «Άλλοι σελιδοδείκτες»">
+<!ENTITY Ctr_bmbunsortbm	"Αναδυόμενο: εμφάνιση μενού «Άλλοι σελιδοδείκτες»">
 <!ENTITY Ctr_bmbunsortbm2	"Πάνω από τους σελιδοδείκτες">
-<!ENTITY Ctr_bmbviewbmsb	"Αναδυόμενο: εμφάνιση «Προβολή πλευρικής στήλης»">
-<!ENTITY Ctr_bmbviewbmtb	"Αναδυόμενο: εμφάνιση «Προβολή εργαλειοθήκης σελιδοδεικτών»">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
-<!ENTITY Ctr_bmbnounsort	"Αναδυόμενο: απόκρυψη μενού «Άλλοι σελιδοδείκτες»">
+<!ENTITY Ctr_bmbviewbmsb	"Αναδυόμενο: εμφάνιση στοιχείου μενού «Προβολή πλευρικής στήλης»">
+<!ENTITY Ctr_bmbviewbmtb	"Αναδυόμενο: εμφάνιση στοιχείου μενού «Προβολή εργαλειοθήκης σελιδοδεικτών»">
+<!ENTITY Ctr_bmbutnotb		"Αναδυόμενο: απόκρυψη μενού «Εργαλειοθήκη σελιδοδεικτών»">
+<!ENTITY Ctr_bmbnounsort	"Αναδυόμενο: απόκρυψη μενού και στοιχείου μενού «Άλλοι σελιδοδείκτες»">
 <!ENTITY Ctr_bmbutclpopup	"Αναδυόμενο: εμφάνιση μόνο «Προσθήκη στους σελιδοδείκτες» και σελιδοδεικτών">
 <!ENTITY Ctr_bmbutnotext	"Απόκρυψη ετικέτας στην εργαλειοθήκη σελιδοδεικτών">
 <!ENTITY Ctr_skipprintpr	"Κουμπί «Εκτύπωση»: παράκαμψη προεπισκόπησης εκτύπωσης">
@@ -399,9 +399,9 @@
 <!ENTITY Ctr_e_tabsaudioico	"Εικονίδιο αναπαραγωγής ήχου σε καρτέλες">
 <!ENTITY Ctr_e_containertab	"Καρτέλeς περιεκτών">
 <!ENTITY Ctr_e_findbarhl	"Επισημάνσεις γραμμής εύρεσης">
-<!ENTITY Ctr_fx50findbarhl	"Αποεπιλέγοντας αυτή την προτίμηση απομακρύνονται οι δυνατότητες επισήμανσης της γραμμής εύρεσης.">
+<!ENTITY Ctr_fx50findbarhl	"Αποεπιλέγοντας αυτή την προτίμηση απομακρύνονται οι νέες δυνατότητες επισήμανσης της γραμμής εύρεσης.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"Παλιά απόδοση γραμματοσειρών">
 
 
 <!ENTITY Ctr_pw_settings	"Ρυθμίσεις">
