--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -98,7 +98,7 @@
 <!ENTITY Ctr_paneluibtweak	"Menijowe tłóčatko jako tłóčatko &brandShortName; pokazać,...">
 <!ENTITY Ctr_paneluibtweak2	"Menijowe tłóčatko jako tłóčatko &brandShortName; pokazać (jenož symbol),...">
 <!ENTITY Ctr_paneluibtweak3	"...hdyž je na rajtarkowej lajsće">
-<!ENTITY Ctr_appbuttonc		"Tłóčatkowa barba">
+<!ENTITY Ctr_appbuttonc		"Barba">
 <!ENTITY Ctr_appbuttonc_o	"Oranžowy (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Módry (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Čorny (Nightly)">
@@ -183,7 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Startowa strona (about:home): šlipki schować">
 <!ENTITY Ctr_search_ui		"Pytanje">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"Njeje z druhimi pytanskimi přidatkami kompatibelny!">
 <!ENTITY Ctr_ctroldsearchc	"Po pytanju pytanske polo wuprózdnić">
 <!ENTITY Ctr_ctroldsearchr	"Po pytanju so k prěnjej pytawje w lisćinje wróćić">
 <!ENTITY Ctr_ctrosearchdel	"komdźenje">
@@ -210,12 +210,12 @@
 <!ENTITY Ctr_oldplacesbut	"Zapiski a rjadowaki zapołožkow na symbolowej lajsće: stary napohlad">
 <!ENTITY Ctr_dl_pm_drop		"Wobłuk sćehnjenskich tłóčatkow: tłóčatko šipkoweho kónčka pokazać">
 <!ENTITY Ctr_bmbutpanelm	"Wuskakowacy meni: Napohlad wuskakowaceho menija">
-<!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: Meni Druhe zapołožki'">
+<!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: Meni 'Druhe zapołožki' pokazać">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zapołožkami">
-<!ENTITY Ctr_bmbviewbmsb	"Wuskakowacy meni: 'Bóčnicu zapołožkow pokazać' pokazać">
-<!ENTITY Ctr_bmbviewbmtb	"Wuskakowacy meni: 'Lajstu zapołožkow pokazać' pokazać">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
-<!ENTITY Ctr_bmbnounsort	"Wuskakowacy meni: 'Druhe zapołožki' schować">
+<!ENTITY Ctr_bmbviewbmsb	"Wuskakowacy meni: Menijowy zapisk 'Bóčnicu zapołožkow pokazać' pokazać">
+<!ENTITY Ctr_bmbviewbmtb	"Wuskakowacy meni: Menijowy zapisk 'Lajstu zapołožkow pokazać' pokazać">
+<!ENTITY Ctr_bmbutnotb		"Wuskakowacy meni: Meni 'Lajsty zapołožkow' schować">
+<!ENTITY Ctr_bmbnounsort	"Wuskakowacy meni: Meni a menijowy zapisk 'Druhe zapołožki' schować">
 <!ENTITY Ctr_bmbutclpopup	"Wuskakowacy meni: jenož 'Tutu stronu jako zapołožku składować' a zapołožki pokazać">
 <!ENTITY Ctr_bmbutnotext	"Tekst na lajśce zapołožkow schować">
 <!ENTITY Ctr_skipprintpr	"Ćišćerske tłóčatko: Ćišćerski přehlad přeskočić">
@@ -399,9 +399,9 @@
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowothrawanje">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rajtarki">
 <!ENTITY Ctr_e_findbarhl	"Wuzběhnjenje pytanskeho pola">
-<!ENTITY Ctr_fx50findbarhl	"Hdyž so tute nastajenja znjemóžnja, so 'wuzběhnjenske' funkcije wotstronja.">
+<!ENTITY Ctr_fx50findbarhl	"Hdyž so tute nastajenja znjemóžnja, so nowe 'wuzběhnjenske' funkcije wotstronja.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"Rysowanje starych pismow">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
