--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -98,7 +98,7 @@
 <!ENTITY Ctr_paneluibtweak	"Menijowy tłocašk ako tłocašk &brandShortName; pokazaś,...">
 <!ENTITY Ctr_paneluibtweak2	"Menijowy tłocašk ako tłocašk &brandShortName; pokazaś (jano symbol),...">
 <!ENTITY Ctr_paneluibtweak3	"...gaž jo na rejtarkowej rědce">
-<!ENTITY Ctr_appbuttonc		"Tłocaškowa barwa">
+<!ENTITY Ctr_appbuttonc		"Barwa">
 <!ENTITY Ctr_appbuttonc_o	"Oranžowy (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Módry (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Carny (Nightly)">
@@ -183,7 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Startowy bok (about:home): kusacki schowaś">
 <!ENTITY Ctr_search_ui		"Pytanje">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"Njejo z drugimi pytańskimi dodankami kompatibelny!">
 <!ENTITY Ctr_ctroldsearchc	"Pó pytanju pytańske pólo wuprozniś">
 <!ENTITY Ctr_ctroldsearchr	"Pó pytanju so k prědnej pytnicy w lisćinje wrośiś">
 <!ENTITY Ctr_ctrosearchdel	"wokomuźenje">
@@ -210,12 +210,12 @@
 <!ENTITY Ctr_oldplacesbut	"Zapiski a zarědniki na symbolowej rědce: stary naglěd">
 <!ENTITY Ctr_dl_pm_drop		"Wobcerk ześěgnjeńskich tłocaškow: tłocašk špica šypki pokazaś">
 <!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: Naglěd menijowego wuskokujucego wokna">
-<!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: Meni 'Druge cytańske znamjenja'">
+<!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: Meni 'Druge cytańske znamjenja' pokazaś">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad cytańskimi znamjenjami">
-<!ENTITY Ctr_bmbviewbmsb	"Wuskokujucy meni: 'Bocnicu cytańskich znamjenjow pokazaś' pokazaś">
-<!ENTITY Ctr_bmbviewbmtb	"Wuskokujucy meni: 'Rědku cytańskich znamjenjow pokazaś' pokazaś">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
-<!ENTITY Ctr_bmbnounsort	"Wuskokujucy meni: 'Druge cytańske znamjenja' schowaś">
+<!ENTITY Ctr_bmbviewbmsb	"Wuskokujucy meni: Menijowy zapisk 'Bocnicu cytańskich znamjenjow pokazaś' pokazaś">
+<!ENTITY Ctr_bmbviewbmtb	"Wuskokujucy meni: Menijowy zapisk 'Rědku cytańskich znamjenjow pokazaś' pokazaś">
+<!ENTITY Ctr_bmbutnotb		"Wuskokujucy meni:: Meni 'Rědka cytańskich znamjenjow' schowaś">
+<!ENTITY Ctr_bmbnounsort	"Wuskokujucy meni: Meni a menijowy zapisk 'Druge cytańske znamjenja' schowaś">
 <!ENTITY Ctr_bmbutclpopup	"Wuskokujucy meni: jano 'Toś ten bok ako cytańske znamjo składowaś' a cytańske znamjenja pokazaś">
 <!ENTITY Ctr_bmbutnotext	"Tekst na rědce cytańskich znamjenjow schowaś">
 <!ENTITY Ctr_skipprintpr	"Śišćarski tłocašk: Śišćarski pśeglěd pśeskócyś">
@@ -399,9 +399,9 @@
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowótgrawanje">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rejtarki">
 <!ENTITY Ctr_e_findbarhl	"Wuzwignjenje pytańskego póla">
-<!ENTITY Ctr_fx50findbarhl	"Gaž se toś te nastajenja znjemóžniju, se 'wuzwignjeńske' funkcije wótpóraju.">
+<!ENTITY Ctr_fx50findbarhl	"Gaž se toś te nastajenja znjemóžniju, se nowe 'wuzwignjeńske' funkcije wótpóraju.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"Kreslenje starych pismow">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
