--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -140,7 +140,7 @@
 <!ENTITY Ctr_altoptionsi	"La ventana simulada de opciones ya no es un cuadro de diálogo sino una 'ventana de navegador' con todas las barras de herramientas ocultas. La característica 'Usar página actual' como página de inicio sólo añade URLs de páginas abiertas en la ventana actual, que en este caso sólo es 'about:preferences'. El botón de barra de herramientas 'Opciones' se sustituye por uno nuevo para poder abrir las opciones en una ventana.">
 <!ENTITY Ctr_options_rem	"Recordar la última categoría seleccionada">
 <!ENTITY Ctr_aboutpages		"Páginas 'about:' generales: Apariencia alternativa">
-<!ENTITY Ctr_svgfilters		"Colores SVG para iconos predeterminados de botones de barra de herramientas">
+<!ENTITY Ctr_svgfilters		"Colores SVG para iconos de botones predeterminados de la barra de herramientas">
 <!ENTITY Ctr_wincontrols	"Controles de ventana móviles en pantalla completa">
 <!ENTITY Ctr_puibuttonsep	"Posición del separador del botón de menú">
 <!ENTITY Ctr_puibut_no_sep	"Oculto">
@@ -150,7 +150,7 @@
 <!ENTITY Ctr_oldtoplevimg	"Vista de imagen: Apariencia clásica sobre fondo blanco">
 <!ENTITY Ctr_altalertbox	"'Recuadro de alerta': Apariencia alternativa">
 <!ENTITY Ctr_emptygfavico	"Reemplazar favicon genérico">
-<!ENTITY Ctr_mstatusbar		"Mostrar panel móvil de contenedor de la antigua barra de estado">
+<!ENTITY Ctr_mstatusbar		"Mostrar panel móvil del contenedor de la antigua barra de estado">
 <!ENTITY Ctr_mstatusbars4e	"El panel de barra de estado está controlado por 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"El panel de barra de estado está controlado por 'ThePuzzlePiece'">
 <!ENTITY Ctr_mstatusbarpzt	"El panel de barra de estado está controlado por 'Puzzle Bars'">
@@ -177,13 +177,13 @@
 <!ENTITY Ctr_nav_txt_ico3	"Mostrar sólo texto">
 <!ENTITY Ctr_nav_txt_exp	"Atributos clásicos (experimental):">
 <!ENTITY Ctr_iat_notf_vt	"Excluir barras de herramientas verticales">
-<!ENTITY Ctr_cpanelmenus	"Menús tipo panel (botones de Historial, triple-barra, etc.): Vista compacta">
+<!ENTITY Ctr_cpanelmenus	"Menús emergentes de panel (botones de Historial, triple-barra, etc.): Vista compacta">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: Ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_alt_newtabp	"Página de nueva pestaña (about:newtab): Apariencia alternativa">
 <!ENTITY Ctr_nosnippets		"Página de inicio (about:home): Ocultar miniaturas">
 <!ENTITY Ctr_search_ui		"Buscar">
 <!ENTITY Ctr_ctroldsearch	"Menú antiguo de la barra de búsqueda">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"¡No compatible con otros complementos de búsqueda!">
 <!ENTITY Ctr_ctroldsearchc	"Limpiar barra de búsqueda después de buscar">
 <!ENTITY Ctr_ctroldsearchr	"Volver al primer motor de búsqueda de la lista después de buscar">
 <!ENTITY Ctr_ctrosearchdel	"de retardo">
@@ -214,8 +214,8 @@
 <!ENTITY Ctr_bmbunsortbm2	"Menú por encima de los marcadores">
 <!ENTITY Ctr_bmbviewbmsb	"Mostrar 'Ver el panel lateral de marcadores'">
 <!ENTITY Ctr_bmbviewbmtb	"Mostrar 'Ver la barra de marcadores'">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
-<!ENTITY Ctr_bmbnounsort	"Ocultar 'Otros marcadores'">
+<!ENTITY Ctr_bmbutnotb		"Ocultar menú 'Barra de Marcadores'">
+<!ENTITY Ctr_bmbnounsort	"Ocultar menú 'Otros marcadores'">
 <!ENTITY Ctr_bmbutclpopup	"Sólo mostrar 'Añadir esta página a marcadores' y los marcadores">
 <!ENTITY Ctr_bmbutnotext	"Ocultar etiquetas en la barra de marcadores">
 <!ENTITY Ctr_skipprintpr	"Botón Imprimir: Omitir previsualización de la impresión">
@@ -372,12 +372,12 @@
 <!ENTITY Ctr_addonbarfs		"En modo pantalla completa">
 
 <!ENTITY Ctr_tabthrobber	"Imagen durante la carga">
-<!ENTITY Ctr_bmanimation	"Animación: Al añadir nuevos marcadores">
-<!ENTITY Ctr_pananimation	"Animación: De la apertura de menús de panel">
-<!ENTITY Ctr_tabanimation	"Animación: De la apertura/cierre de pestañas">
-<!ENTITY Ctr_dlanimation	"Animación: De las notificaciones de descarga">
-<!ENTITY Ctr_fsanimation	"Animación: Del cambio a pantalla completa">
-<!ENTITY Ctr_fsaduration	"Animación: Del cambio a pantalla completa para contenidos HTML5">
+<!ENTITY Ctr_bmanimation	"Animación al añadir nuevos marcadores">
+<!ENTITY Ctr_pananimation	"Animación de la apertura de menús de panel">
+<!ENTITY Ctr_tabanimation	"Animación de la apertura/cierre de pestañas">
+<!ENTITY Ctr_dlanimation	"Animación de las notificaciones de descarga">
+<!ENTITY Ctr_fsanimation	"Animación del cambio a pantalla completa">
+<!ENTITY Ctr_fsaduration	"Animación del cambio a pantalla completa para contenidos HTML5">
 
 <!ENTITY Ctr_toolsitem		"Elemento en el menú Herramientas">
 <!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
@@ -398,10 +398,10 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icono de reproducción de audio en las pestañas">
 <!ENTITY Ctr_e_containertab	"Pestañas contenedor">
-<!ENTITY Ctr_e_findbarhl	"Función de resaltado de la barra de herramientas de búsqueda.">
+<!ENTITY Ctr_e_findbarhl	"Función de resaltado de la barra de herramientas de búsqueda">
 <!ENTITY Ctr_fx50findbarhl	"Desmarcarlas deshabilita el resaltado: estilo modal (con atenuación) / de todas las coincidencias">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"Renderizado antiguo de fuentes">
 
 
 <!ENTITY Ctr_pw_settings	"Configuración">
@@ -431,7 +431,7 @@
 <!ENTITY Ctr_restartapp					"'Reiniciar' en el menú de &brandShortName; y el menú 'Archivo'">
 <!ENTITY Ctr_ctrnewinv					"Subrayar opciones nuevas para la actual versión de &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Código CSS personalizado">
-<!ENTITY Ctr_cssoverride2				"¡El código CSS no se revisará en busca de errores!">
+<!ENTITY Ctr_cssoverride2				"¡No se revisará en busca de errores!">
 
 <!ENTITY Ctr_openInCurrentTab			"Abrir entradas en la pestaña actual">
 <!ENTITY Ctr_openInNewTab				"Abrir entradas en una nueva pestaña">
