--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -183,7 +183,7 @@
 <!ENTITY Ctr_nosnippets		"Page de démarrage par défaut (about:home) : masquer les astuces">
 <!ENTITY Ctr_search_ui		"Barre de recherche">
 <!ENTITY Ctr_ctroldsearch	"Ancienne interface de barre de recherche">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"Incompatible avec les autres modules de recherche !">
 <!ENTITY Ctr_ctroldsearchc	"Suite à une recherche, effacer le contenu de la barre après...">
 <!ENTITY Ctr_ctroldsearchr	"Suite à une recherche, revenir au premier moteur de la liste après...">
 <!ENTITY Ctr_ctrosearchdel	"">
@@ -210,13 +210,13 @@
 <!ENTITY Ctr_oldplacesbut	"Éléments et dossiers de marque-pages sur une barre d'outil : ancienne apparence">
 <!ENTITY Ctr_dl_pm_drop		"Panneau du bouton d'état du téléchargement : afficher la flèche de menu déroulant">
 <!ENTITY Ctr_bmbutpanelm	"Menu déroulant : apparence de menu de type « panneau »">
-<!ENTITY Ctr_bmbunsortbm	"Menu déroulant : menu « Autres marque-pages »">
+<!ENTITY Ctr_bmbunsortbm	"Menu déroulant : afficher le menu « Autres marque-pages »">
 <!ENTITY Ctr_bmbunsortbm2	"Menu au-dessus des marque-pages">
-<!ENTITY Ctr_bmbviewbmsb	"Menu déroulant : afficher « Afficher panneau des marque-pages »">
-<!ENTITY Ctr_bmbviewbmtb	"Menu déroulant : afficher « Afficher la barre personnelle »">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
-<!ENTITY Ctr_bmbnounsort	"Menu déroulant : masquer « Autres marque-pages »">
-<!ENTITY Ctr_bmbutclpopup	"Menu déroulant : afficher uniquement « Marquer cette page » et les onglets">
+<!ENTITY Ctr_bmbviewbmsb	"Menu déroulant : afficher l'élément « Afficher panneau des marque-pages »">
+<!ENTITY Ctr_bmbviewbmtb	"Menu déroulant : afficher l'élément « Afficher la barre personnelle »">
+<!ENTITY Ctr_bmbutnotb		"Menu déroulant : masquer le menu « Barre personnelle »">
+<!ENTITY Ctr_bmbnounsort	"Menu déroulant : masquer le menu et les élements « Autres marque-pages »">
+<!ENTITY Ctr_bmbutclpopup	"Menu déroulant : afficher uniquement « Marquer cette page » ainsi que les onglets">
 <!ENTITY Ctr_bmbutnotext	"Masquer le texte sur la barre personnelle">
 <!ENTITY Ctr_skipprintpr	"Bouton « Imprimer » : sauter l'aperçu avant impression">
 <!ENTITY Ctr_tbconmenu		"Menu contextuel de barre d'outils : masquer « Déplacer vers le menu », « Retirer de la barre d'outils », « Actualiser/Marquer tous les onglets » et « Annuler la fermeture de l'onglet »">
@@ -399,9 +399,9 @@
 <!ENTITY Ctr_e_tabsaudioico	"Icône de lecture audio">
 <!ENTITY Ctr_e_containertab	"Onglets conteneurs">
 <!ENTITY Ctr_e_findbarhl	"Surlignage avancé de la barre de recherche">
-<!ENTITY Ctr_fx50findbarhl	"Décocher ces paramètres désactive les fonctionnalités de surlignage avancées de la barre de recherche.">
+<!ENTITY Ctr_fx50findbarhl	"Décocher ces paramètres désactive les nouvelles fonctionnalités de surlignage avancées de la barre de recherche.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"Ancien rendu des polices">
 
 
 <!ENTITY Ctr_pw_settings	"Paramètres">
