--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -183,7 +183,7 @@
 <!ENTITY Ctr_nosnippets		"开始页面 (about:home): 隐藏片断">
 <!ENTITY Ctr_search_ui		"搜索">
 <!ENTITY Ctr_ctroldsearch	"旧式搜索">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"与其它搜索扩展不兼容!">
 <!ENTITY Ctr_ctroldsearchc	"搜索后清除搜索框">
 <!ENTITY Ctr_ctroldsearchr	"搜索后重置为列表中的第一个搜索引擎">
 <!ENTITY Ctr_ctrosearchdel	"延迟">
@@ -214,7 +214,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"菜单在书签之上">
 <!ENTITY Ctr_bmbviewbmsb	"弹出式菜单: 显示“查看侧边栏”">
 <!ENTITY Ctr_bmbviewbmtb	"弹出式菜单: 显示“查看工具栏”">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
+<!ENTITY Ctr_bmbutnotb		"弹出式菜单: 隐藏“书签工具栏”">
 <!ENTITY Ctr_bmbnounsort	"弹出式菜单: 隐藏“未分类书签”">
 <!ENTITY Ctr_bmbutclpopup	"弹出式菜单: 仅显示“将此页加为书签”和书签">
 <!ENTITY Ctr_bmbutnotext	"隐藏书签工具栏上的文本标签">
@@ -401,7 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"搜索栏高亮">
 <!ENTITY Ctr_fx50findbarhl	"不选中此项以移除搜索栏“高亮”功能。">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"旧式字体渲染">
 
 
 <!ENTITY Ctr_pw_settings	"设置">
