--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -188,7 +188,7 @@
 <!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
 <!ENTITY Ctr_ctrosearchdel	"delay">
 <!ENTITY Ctr_search_oit		"Open search in new tab">
-<!ENTITY Ctr_osearch_meoit	"Middle-clicks: search in new 'foreground tab'">
+<!ENTITY Ctr_osearch_meoit	"Middle-click: open search in new 'foreground tab'">
 <!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
 <!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
 <!ENTITY Ctr_osearch_dm		"Small dropmarker">
