--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -98,7 +98,7 @@
 <!ENTITY Ctr_paneluibtweak	"Botão do menu do painel...">
 <!ENTITY Ctr_paneluibtweak2	"Botão do menu do painel (só o ícone)...">
 <!ENTITY Ctr_paneluibtweak3	"...na barra de abas na cor laranja">
-<!ENTITY Ctr_appbuttonc		"Cor do botão">
+<!ENTITY Ctr_appbuttonc		"Cor">
 <!ENTITY Ctr_appbuttonc_o	"Laranja (padrão)">
 <!ENTITY Ctr_appbuttonc_a	"Azul (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Preto (Nightly)">
@@ -183,12 +183,12 @@
 <!ENTITY Ctr_nosnippets		"Página inicial (about:home): ocultar snippets">
 <!ENTITY Ctr_search_ui		"Pesquisa">
 <!ENTITY Ctr_ctroldsearch	"Pesquisa antiga">
-<!ENTITY Ctr_ctroldsearchd	"Not compatible to other search add-ons!">
+<!ENTITY Ctr_ctroldsearchd	"Não compatível com outros complementos de pesquisa!">
 <!ENTITY Ctr_ctroldsearchc	"Limpar caixa de pesquisa após pesquisar">
 <!ENTITY Ctr_ctroldsearchr	"Reverter para primeiro mecanismo de busca na lista após pesquisar">
 <!ENTITY Ctr_ctrosearchdel	"atraso">
 <!ENTITY Ctr_search_oit		"Abrir pesquisa em nova aba">
-<!ENTITY Ctr_osearch_meoit	"Cliques do meio: pesquisar em nova 'aba em primeiro plano'">
+<!ENTITY Ctr_osearch_meoit	"Clique do meio: pesquisar em nova 'aba em primeiro plano'">
 <!ENTITY Ctr_osearch_iwidth	"Automaticamente ajustar largura do popup">
 <!ENTITY Ctr_osearch_cwidth	"Largura personalizada para popups de pesquisa">
 <!ENTITY Ctr_osearch_dm		"Marcador pequeno">
@@ -210,12 +210,12 @@
 <!ENTITY Ctr_oldplacesbut	"Itens e pastas de favoritos na barra de ferramentas: aparência antiga">
 <!ENTITY Ctr_dl_pm_drop		"Painel dos botões de download: exibir marcador de lista">
 <!ENTITY Ctr_bmbutpanelm	"Popup: aparência do menu do painel">
-<!ENTITY Ctr_bmbunsortbm	"Popup: menu 'outros favoritos'">
+<!ENTITY Ctr_bmbunsortbm	"Popup: exibir o menu 'outros favoritos'">
 <!ENTITY Ctr_bmbunsortbm2	"Menu acima dos favoritos">
-<!ENTITY Ctr_bmbviewbmsb	"Popup: exibir 'Ver Barra Lateral de Favoritos'">
-<!ENTITY Ctr_bmbviewbmtb	"Popup: exibir 'Ver Barra de Favoritos'">
-<!ENTITY Ctr_bmbutnotb		"Popup: hide 'Bookmarks Toolbar' menu">
-<!ENTITY Ctr_bmbnounsort	"Popup: ocultar 'Outros Favoritos'">
+<!ENTITY Ctr_bmbviewbmsb	"Popup: exibir item do menu 'Ver Barra Lateral de Favoritos'">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: exibir item do menu 'Ver Barra de Favoritos'">
+<!ENTITY Ctr_bmbutnotb		"Popup: ocultar menu 'Barra de Favoritos'">
+<!ENTITY Ctr_bmbnounsort	"Popup: ocultar menu e item do menu 'Outros favoritos'">
 <!ENTITY Ctr_bmbutclpopup	"Popup: exibir somente 'Adicionar aos favoritos' e favoritos">
 <!ENTITY Ctr_bmbutnotext	"Ocultar rótulo na barra de favoritos">
 <!ENTITY Ctr_skipprintpr	"Botão Imprimir: ignorar pré-visualização da impressão">
@@ -399,10 +399,9 @@
 <!ENTITY Ctr_e_tabsaudioico	"Ícone de reprodução de áudio">
 <!ENTITY Ctr_e_containertab	"Abas container">
 <!ENTITY Ctr_e_findbarhl	"Realce da barra de localização">
-<!ENTITY Ctr_fx50findbarhl	"Desmarcar estas preferências remove os recursos de 'realce' das barra de localização.">
+<!ENTITY Ctr_fx50findbarhl	"Desmarcar estas preferências remove os novos recursos de 'realce' das barra de localização.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
-
+<!ENTITY Ctr_e_oldfontgfx	"Antiga renderização de fonte">
 
 <!ENTITY Ctr_pw_settings	"Configurações">
 <!ENTITY Ctr_pw_set_reset	"Restaurar aos padrões">
@@ -421,6 +420,7 @@
 <!ENTITY Ctr_support_forum1	"MozillaZine (fórum em Inglês)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (fórum Alemão)">
 <!ENTITY Ctr_github_issues	"Reportar problema no Github">
+<!ENTITY Ctr_newversion		"Verificar nova versão">
 <!ENTITY Ctr_newversion		"Versão CTR mais recente">
 <!ENTITY Ctr_newversion2	"Versão beta CTR mais recente">
 
