--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -188,7 +188,7 @@
 <!ENTITY Ctr_ctroldsearchr	"Przywracaj pierwszą wyszukiwarkę na liście po wyszukaniu">
 <!ENTITY Ctr_ctrosearchdel	"opóźnienia">
 <!ENTITY Ctr_search_oit		"Otwórz wyszukiwanie w nowej karcie">
-<!ENTITY Ctr_osearch_meoit	"Kliknięcia środkowym przyciskiem: wyszukaj w nowej 'karcie pierwszoplanowej'">
+<!ENTITY Ctr_osearch_meoit	"Kliknięcie środkowym przyciskiem: otwórz wyszukiwanie w nowej 'karcie pierwszoplanowej'">
 <!ENTITY Ctr_osearch_iwidth	"Automatycznie dostosuj szerokość menu podręcznego">
 <!ENTITY Ctr_osearch_cwidth	"Niestandardowa szerokość menu podręcznego wyszukiwania">
 <!ENTITY Ctr_osearch_dm		"Mały przycisk podręczny">
