Update options.dtd in Czech lang.
Update options.dtd in Czech lang.

--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -147,8 +147,8 @@
 <!ENTITY Ctr_puibut_l_sep	"Vlevo">
 <!ENTITY Ctr_puibut_r_sep	"Vpravo">
 <!ENTITY Ctr_html5warning	"Varování HTML5 při full screenu">
-<!ENTITY Ctr_oldtoplevimg	"'Top level domain' obrázků: klasický vzhled">
-<!ENTITY Ctr_altalertbox	"'Okno s upozorněním': alternativní vzhled">
+<!ENTITY Ctr_oldtoplevimg	"Top level domain obrázků: klasický vzhled">
+<!ENTITY Ctr_altalertbox	"Okno s upozorněním: alternativní vzhled">
 <!ENTITY Ctr_emptygfavico	"Nahradit původní faviconu">
 <!ENTITY Ctr_mstatusbar		"Přesunutelný stavový řádek">
 <!ENTITY Ctr_mstatusbars4e	"Stavový řádek je nastaven pomocí rozšíření 'Status-4-Evar'">
@@ -165,7 +165,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Hledání">
 <!ENTITY Ctr_findbar_hws	"Zavřít okno vyhledávání při rolování stránky">
-<!ENTITY Ctr_findbar_width	"Vyhledávání - šířka pole: ">
+<!ENTITY Ctr_findbar_width	"Šířka pole Vyhledávání: ">
 <!ENTITY Ctr_findbarpos		"Lišta vyhledávání">
 <!ENTITY Ctr_findbar_def	"Výchozí umístění">
 <!ENTITY Ctr_findbar_top	"Nahoře">
@@ -177,7 +177,7 @@
 <!ENTITY Ctr_nav_txt_ico3	"Zobrazit pouze text">
 <!ENTITY Ctr_nav_txt_exp	"Klasické atributy (experimentální):">
 <!ENTITY Ctr_iat_notf_vt	"S výjimkou svislých lišt">
-<!ENTITY Ctr_cpanelmenus	"Nabídky panelů: kompaktní zobrazení (záložky, historie atd.)">
+<!ENTITY Ctr_cpanelmenus	"Nabídky panelů: kompaktní zobrazení (záložky, historie, atd.)">
 <!ENTITY Ctr_hidezoomres	"Přiblížit prvky na liště: skrýt tlačítko pro obnovení lupy">
 <!ENTITY Ctr_alt_newtabp	"Nový panel (about:newtab): alternativní vzhled">
 <!ENTITY Ctr_nosnippets		"Startovní stránka (about:home): skrýt snippets">
@@ -216,7 +216,7 @@
 <!ENTITY Ctr_bmbviewbmtb	"Popup: ukázat 'Zobrazit lištu'">
 <!ENTITY Ctr_bmbutnotb		"Popup: skrýt menu 'Lišta záložek'">
 <!ENTITY Ctr_bmbnounsort	"Popup: skrýt 'Netříděné záložky'">
-<!ENTITY Ctr_bmbutclpopup	"Popup: zobrazit pouze 'Uložit stránku do záložek a záložky">
+<!ENTITY Ctr_bmbutclpopup	"Popup: zobrazit pouze 'Uložit stránku do záložek' a 'záložky'">
 <!ENTITY Ctr_bmbutnotext	"Skrýt návěští na liště záložek">
 <!ENTITY Ctr_skipprintpr	"Tlačítko tisku: přeskočit náhled tisku">
 <!ENTITY Ctr_tbconmenu		"Kontextové menu položek lišty: skrýt 'přesunout do nabídky', 'odebrat z lišty', 'obnovit/přidat do záložek všechny panely' a 'obnovit zavřený panel'">
@@ -258,7 +258,7 @@
 <!ENTITY Ctr_ntabhov		"Nový panel (najetí myši)">
 <!ENTITY Ctr_bold			"Tučný">
 <!ENTITY Ctr_italic			"Kurzíva">
-<!ENTITY Ctr_underlined		"Underlined">
+<!ENTITY Ctr_underlined		"Podtržené">
 <!ENTITY Ctr_notabhov		"Zvoleným nastavením přepsat 'najetí myši'">
 <!ENTITY Ctr_tablowopa		"Redukovat viditelnost panelu">
 <!ENTITY Ctr_tabc_act_tb	"Barva pozadí lišt">
@@ -401,7 +401,7 @@
 <!ENTITY Ctr_e_findbarhl	"Zvýraznění okna vyhledávání">
 <!ENTITY Ctr_fx50findbarhl	"Nezatržení předvolby odstraní zvýraznění vyhledávání.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"Starý způsob renderování písma">
 
 
 <!ENTITY Ctr_pw_settings	"Možnosti">
@@ -428,8 +428,8 @@
 <!ENTITY appMenuGettingStarted.label	"Začínáme">
 <!ENTITY goCmd.label					"Přejít">
 <!ENTITY Ctr_menu_restart.label			"Restart">
-<!ENTITY Ctr_restartapp					"'Restart' in &brandShortName;-menu and file menu">
-<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
+<!ENTITY Ctr_restartapp					"Tlačítko 'Restart' v nabídce &brandShortName; a v nabídce Soubor">
+<!ENTITY Ctr_ctrnewinv					"Podtrhávat nové možnosti v aktuální verzi &brandShortName;">
 <!ENTITY Ctr_cssoverride				"Vlastní CSS kódy">
 <!ENTITY Ctr_cssoverride2				"CSS kód není kontrolován na chyby!">
 
