--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -188,7 +188,7 @@
 <!ENTITY Ctr_ctroldsearchr	"Suite à une recherche, revenir au premier moteur de la liste après...">
 <!ENTITY Ctr_ctrosearchdel	"">
 <!ENTITY Ctr_search_oit		"Ouvrir la recherche dans un nouvel onglet">
-<!ENTITY Ctr_osearch_meoit	"Clic milieu : rechercher dans un nouvel « onglet au premier plan »">
+<!ENTITY Ctr_osearch_meoit	"Clic milieu : ouvrir la recherche dans un nouvel onglet au premier plan">
 <!ENTITY Ctr_osearch_iwidth	"Ajuster automatiquement la largeur de la fenêtre surgissante">
 <!ENTITY Ctr_osearch_cwidth	"Largeur personnalisée pour la fenêtre surgissante">
 <!ENTITY Ctr_osearch_dm		"Réduire la taille du bouton de liste déroulante">
